--- a/hugo.toml
+++ b/hugo.toml
@@ -17,7 +17,7 @@ theme = 'PaperMod'
 [[menu.main]]
   identifier = "Games"
   name = "Games"
-  url = "/SherlockGamesHelper/games/"
+  url = "/games/"
  
 [outputs]
   home = [ "HTML", "RSS", "JSON" ]
